# aria

./: .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  ARIA_ARRAY_INDEX_ASSIGNMENT_COMPLETE.md  ARIA_FUNCTION_POINTER_CASTING_COMPLETE.md  ARIA_WILDX_COMPLETE.md  AUDIT_PREP_SUMMARY.md  CHECK_IMPLEMENTATION_STATUS.md  CLOSURE_IMPLEMENTATION.md  CMakeLists.txt  CONTRIBUTING.md  DONATIONS.md  FRESH_START_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LABEL_SYNTAX_COMPLETE.md  LICENSE.md  PLATFORM_ABSTRACTION_COMPLETE.md  README.md  RELEASE_ROADMAP.md  SEND_TO_GEMINI.txt  SPEC_COMPLIANCE_STATUS.md  STATUS.md  TODO  WEEK_1_PLAN.md  a.out  build.sh  check_token_88  check_token_88.cpp  clean  demo_array.aria  extract_user_code.py  find_exact_88  find_exact_88.cpp  find_token_88  find_token_88.cpp  output.ll  simple_main.ll  test.sh  test_array.aria  test_array_simple.aria  (+53 more)
archive/v0.0.17_20251214_215757/: README.md
backups/pre_refactor_2025_12_10/: BACKUP_INFO.md  CMakeLists.txt
demos/: config_validator.aria  task_queue.aria
docs/: ARIA_PROGRAMMING_GUIDE.md  ASAN_QUICK_REFERENCE.md  ASYNC_SCHEDULER_INTEGRATION_WP003.md  ASYNC_STATUS.md  BALANCED_NONARY_STATUS.md  BALANCED_TERNARY_FINAL_REPORT.md  BALANCED_TERNARY_STATUS.md  BORROW_CHECKER_IMPLEMENTATION_PLAN.md  BUGFIX_BACKWARD_PIPELINE.md  COMPOSITE_TYPES_PART1_STATUS.md  COMPOSITE_TYPES_PART2_STATUS.md  FLOATING_POINT_TYPES_STATUS.md  GC_NURSERY_ALLOCATOR.md  GEMINI_AUDIT_2_COMPLETION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_LOG_AUDIT_v0.0.7.md  IO_STREAMS_IMPLEMENTATION_PLAN.md  LOOP_IMPLEMENTATION_STATUS.md  NEXT_STEPS_v0.0.10.md  P0_FIXES_PROGRESS.md  PARSER_ASSESSMENT.md  PARSER_IMPROVEMENTS_WP003.md  PHASE_0.2_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_2.1_COMPLETE.md  PHASE_2_3_PLAN.md  RESEARCH_BATCH_2_SUMMARY.md  RESEARCH_COMPLETE.md  SHADOW_STACK_WP004.md  STANDARD_INTEGER_TYPES_STATUS.md  STATUS_20251218.md  TBB_IMPLEMENTATION_COMPLETE.md  THREADING_IMPLEMENTATION_PLAN.md  TILL_LOOP_IMPLEMENTATION.md  TODO_REVIEW_ANALYSIS.md  TODO_UPDATE_SUMMARY.md  VECTOR_IMPLEMENTATION_STATUS.md  WEEK_1_COMPLETED.md  WEEK_1_DAY_5_COMPLETED.md  WP_002_CLOSURE_IMPLEMENTATION.md  (+9 more)
docs/analysis/: RESEARCH_016_019_INTEGRATION.md
docs/bugs/: COMPILER_AUDIT_v0.0.7_CRITICAL_FINDINGS.md  assignment_statement_parser_bug.txt  struct_member_access_codegen.txt
docs/design/: DESIGN_PHILOSOPHY.md
docs/examples/: functional_types_example.cpp
docs/fixes/: pipeline_codegen_fix.md
docs/gemini/: README.md  RESEARCH_BATCH_4_SUMMARY.md  SETUP_COMPLETE.md  SUMMARY.md  preferred_order.txt
docs/info/: aria_specs.txt  aria_v0_0_6_specs.txt  generics_guide.md  important.txt  knownProblems.txt  project_info.txt  test.aria
docs/research/: 1_Aria Language Implementation Plan.txt  2_Aria Implementation Plan Review.txt  3_Aria Compiler Architectural Review.txt  3_Plan Review and Spec Validation.txt  4_Plan Review and Specification Validation.txt  Aria_v0.0.6_Specs.txt  Custom Language RWX Memory Allocation.txt  Custom Twisted Binary Type Implementation.txt  Preprocessor Macro Enhancement Proposal.txt  Runtime Assembler for Wildx Memory.txt
docs/roadmap/: IMPLEMENTATION_ROADMAP.md
docs/security/: WILDX_GUARD_SECURITY_FIX.md
docs/status/: FUNCTIONAL_TYPES_STATUS.md
editors/tree-sitter-aria/: Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  setup.sh
editors/vscode/: CHANGELOG.md  DEV.md  README.md  language-configuration.json  package.json  sample.aria  setup.sh  tsconfig.json
examples/: PREPROCESSOR_TESTS.md  README.md  arithmetic_test.aria  diagnostics_demo  diagnostics_demo.cpp  include_test.aria  simple_add.aria  struct_methods_dot_syntax.aria  test_cli_flags.aria  test_floating_point.aria  test_floats_simple.aria  test_integers_simple.aria  test_lexer_debug.aria  test_parser_basic.aria  test_parser_comprehensive.aria  test_preprocessor.aria  test_spec_lambdas.aria  test_spec_phase1.aria  test_standard_integers.aria  test_ternary.aria  test_ternary_comprehensive.aria  test_while_loop.aria  vectors_demo.aria
examples/advanced/: 10_complete_app.aria
lib/std/: io.aria
src/: main.cpp
stdlib/: math_utils.aria  string_utils.aria
tests/: CMakeLists.txt  README.md  async_minimal.aria  build_tests_standalone.sh  debug_tokens.cpp  debug_tokens2.cpp  debug_tokens3.cpp  demo_banking.aria  demo_grades.aria  demo_matrix.aria  diagnostics_demo.aria  simple_test.s  spec_compliance_test.aria  spec_pick_exact.aria  tbb_test.aria  test_arrays.aria  test_assignments.aria  test_borrow_checker.aria  test_comprehensive.aria  test_control_flow.aria  test_crash_handler.c  test_defer.aria  test_diagnostic.cpp  test_dollar_variable.aria  test_escape_analysis.aria  test_features.aria  test_full_member_access.aria  test_func_minimal.aria  test_func_nogc.aria  test_func_simple2.aria  test_func_with_params.aria  test_function.aria  test_gc_impl.cpp  test_helpers.h  test_lambda.aria  test_lambda.aria.bak  test_lambda_direct.aria  test_lambda_gc_var.aria  test_lambda_in_func.aria  test_lambda_module_simple.aria  (+47 more)
tests/backend/: test_ir_generator.cpp
tests/borrow_checker/: test_lifetime_context
tests/integration/: hello.aria  math.aria  multi_main.aria  runner.sh  test_ir_compilation.cpp  test_ir_optimization.cpp  test_sema_integration.cpp  utils.aria
tests/loops/: test_break.aria  test_break_simple.aria  test_continue.aria  test_till_basic.aria  test_till_nested.aria  test_when_basic.aria  test_while_basic.aria
tests/parser/: result_types.aria
tests/phase23/: baseline.ll  infrastructure.ll
tests/runtime/: test_allocators.cpp  test_assembler.cpp
tests/ternary/: basic_ops.aria  test_ternary_ops  test_ternary_ops.cpp
tests/unit/: test_dap_server.cpp  test_debug_info.cpp  test_diagnostics.cpp  test_generic_parser.cpp  test_lsp_thread_pool.cpp  test_parser.cpp  test_tbb_formatters.cpp  test_type_checker.cpp  test_web_server.cpp
tools/: coverage.sh  sync.sh
training_samples/: 11_recursive_fib.aria  12_recursive_factorial.aria  13_ackermann.aria  README.md
vscode-aria/: README.md  language-configuration.json  package.json
(+520 files in other folders)
