# CMakeLists.txt
# Root build script for Aria Compiler and Runtime
cmake_minimum_required(VERSION 3.14)
project(AriaCompiler VERSION 1.0 LANGUAGES C CXX)

# ==============================================================================
# 1. Dependency Resolution
# ==============================================================================

# Find LLVM 18+
# We require LLVM 18+ for the AVX-512 'VPTERNLOGD' intrinsic support
# LLVM 19.x is also compatible
find_package(LLVM REQUIRED CONFIG)
if(LLVM_VERSION_MAJOR LESS 18)
    message(FATAL_ERROR "LLVM version must be 18 or higher, found ${LLVM_PACKAGE_VERSION}")
endif()
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

llvm_map_components_to_libnames(llvm_libs 
    core support native irreader passes
    x86asmparser x86codegen x86desc x86info
    aarch64asmparser aarch64codegen aarch64desc aarch64info
    armasmparser armcodegen armdesc arminfo
    riscvasmparser riscvcodegen riscvdesc riscvinfo
)

include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})

# Integrate Mimalloc (Static Link for Wild Heap)
# We embed mimalloc from the 'vendor' directory to ensure version stability.
# By setting MI_BUILD_STATIC to ON, we tell mimalloc's own CMake to generate a.a/.lib
set(MI_BUILD_STATIC ON CACHE BOOL "Build static library")
set(MI_BUILD_SHARED OFF CACHE BOOL "Build shared library")
set(MI_BUILD_TESTS OFF CACHE BOOL "Build tests")
set(MI_OVERRIDE OFF CACHE BOOL "Do not override standard malloc globally yet")

add_subdirectory(vendor/mimalloc)

# ==============================================================================
# 2. Source Configuration
# ==============================================================================

# Memory Safety Configuration (WP 004.3)
option(ARIA_ENABLE_SAFETY "Enable Fat Pointer Runtime Checks" ON)

if (ARIA_ENABLE_SAFETY)
    add_compile_definitions(ARIA_SAFETY_ENABLED)
    message(STATUS "Aria Memory Safety: ENABLED (Fat Pointers)")
else()
    message(STATUS "Aria Memory Safety: DISABLED (Fast Mode)")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# Enable strict warnings to catch potential pointer aliasing issues early
add_compile_options(-Wall -Wextra -Wno-unused-parameter)

include_directories(src)

# ==============================================================================
# 3. Target Definition: The Compiler (ariac)
# ==============================================================================

add_executable(ariac
 src/driver/main.cpp               # Compiler Driver Entry Point
 src/frontend/preprocessor.cpp    # Preprocessor (Macros, Includes, Conditionals)
 src/frontend/lexer.cpp
 src/frontend/parser.cpp           # Core Parser Implementation
 # src/frontend/parser_decl.cpp    # EXCLUDED: Duplicates with parser.cpp
 # src/frontend/parser_expr.cpp    # EXCLUDED: Duplicates with parser.cpp
 # src/frontend/parser_func.cpp    # EXCLUDED: Duplicates with parser.cpp
 # src/frontend/parser_stmt.cpp    # EXCLUDED: Duplicates with parser.cpp
 # src/frontend/parser_struct.cpp  # EXCLUDED: Duplicates with parser.cpp
 src/frontend/parser_trait.cpp     # Trait declarations (WP 005.4)
 src/frontend/sema/borrow_checker.cpp  # Borrow Checker Implementation
 src/frontend/sema/escape_analysis.cpp # Escape Analysis Implementation
 src/frontend/sema/type_checker.cpp    # Type Checking Implementation
 src/frontend/sema/trait_checker.cpp   # Trait Type Checking (WP 005.4)
 src/backend/codegen.cpp
 src/backend/codegen_tbb.cpp           # TBB Sticky Error Propagation (v0.0.7 Critical Fix)
 src/backend/tbb_optimizer.cpp         # TBB Optimization Pass (Value Range Propagation)
 src/backend/tbb_loop_optimizer.cpp    # TBB Loop Optimizer (WP 005.1)
 src/backend/tbb_interprocedural.cpp   # TBB Interprocedural Analysis (WP 005.2)
 src/backend/monomorphization.cpp      # Trait Monomorphization Engine (WP 005.4)
 src/backend/vtable.cpp                # Trait Vtable Generation (WP 005.4)
 src/backend/lowering_ternary.cpp  # AVX-512 Lowering Logic
)

# Link against LLVM and Mimalloc
target_link_libraries(ariac 
 PRIVATE 
 ${llvm_libs}
 mimalloc-static
)

# Pass safety mode flag to compiler codegen
target_compile_definitions(ariac PRIVATE 
    ARIA_SAFETY_ENABLED=$<BOOL:${ARIA_ENABLE_SAFETY}>
)

# ==============================================================================
# 4. Target Definition: The Runtime Library (libaria)
# ==============================================================================

# This library is linked into every compiled Aria program.
# It contains the GC, the Scheduler, and the bridge to Mimalloc.
set(RUNTIME_SOURCES
 src/runtime/memory/allocator.c        # The bridge (aria.alloc -> mi_malloc)
 src/runtime/memory/wildx_allocator.c  # Wildx allocator (executable memory for JIT)
 src/runtime/platform/platform.c       # Cross-platform abstraction layer (NEW)
 src/runtime/gc/gc_impl.cpp            # Major/Minor GC Logic
 src/runtime/gc/nursery.cpp            # Fragmented Nursery Implementation
 src/runtime/gc/shadow_stack.cpp       # Shadow Stack for Root Tracking (WP 004)
 src/runtime/io_windows.cpp            # lpReserved2 implementation
 src/runtime/io_linux.cpp              # Linux fork/dup2 implementation
 src/runtime/io/print.cpp              # Print functions (print, println)
 src/runtime/io/file.cpp               # File I/O (readFile, writeFile)
 src/runtime/concurrency/scheduler.cpp # Work-stealing logic
 src/runtime/concurrency/spawn.cpp     # Spawn/Future concurrency runtime
 src/runtime/concurrency/ramp.cpp      # [New] RAMP Logic
 src/stdlib/io/fast_read.cpp
 src/runtime/core/string_impl.cpp      # SSO String Implementation
 src/runtime/debug/stacktrace.c        # Stack trace capture and crash handling (WP 004.2)
)

# Conditionally add Fat Pointer safety system (WP 004.3)
if (ARIA_ENABLE_SAFETY)
    list(APPEND RUNTIME_SOURCES src/runtime/safety/fat_pointer.c)
endif()

add_library(aria_runtime STATIC ${RUNTIME_SOURCES})

# Critical: The runtime MUST contain the static mimalloc symbols.
# Also link dl library for dladdr() symbol resolution in stack traces
target_link_libraries(aria_runtime mimalloc-static dl)

# ==============================================================================
# 5. Testing Infrastructure
# ==============================================================================
# Enable testing support
enable_testing()

# Add the tests subdirectory
add_subdirectory(tests)

# ==============================================================================
# 6. Build Artifacts
# ==============================================================================
message(STATUS "Aria Compiler Build Configured.")
message(STATUS "Run 'cmake --build .' to compile.")
message(STATUS "Run 'make test' or 'ninja test' to run unit tests.")
